[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legal-document-ai-mcp"
version = "1.0.0"
description = "MEOK AI Labs — Legal document toolkit for AI agents: NDA generation, contract clause explanation,"
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "mcp-server", "model-context-protocol", "claude", "ai-tools", "meok-ai-labs", "legal-document", "contract-generation", "legal-template", "legal-drafting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/legal-document-ai-mcp"
Documentation = "https://meok.ai/docs/legal-document-ai-mcp"
"Bug Tracker" = "https://github.com/CSOAI-ORG/legal-document-ai-mcp/issues"
